[package]
name = "mandated_mechanic"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy_rapier3d = { version = "0.23.0", features = ["parallel"] }

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
